# Game-Predictor

./: .gitignore  README.md  main.py  pyproject.toml  visuals.ipynb
models/: cnn_test.npz  nn.pt  nn_scaler.pkl  nn_test.npz  shared_split.npz  transformer.pt  transformer_scaler.pkl  transformer_test.npz
scripts/: enrich.sh  extract_from_steam.py  fix_venv.sh  normalize_dataset.py
src/dashboard/: __init__.py  app.py  callbacks.py  data_loader.py  layout.py
src/ensemble/: combiner.py  run.py
src/game_cnn/: __main__.py  data.py  inspect.py  model.py  pipeline.py
src/game_nn/: __init__.py  __main__.py  data.py  eval.py  model.py  pipeline.py  steam_pipeline.py
src/game_predictor/: __init__.py  agent.py  config.py  models.py  prompts.py
src/game_predictor/cli/: __init__.py  pre_flight.py  run_production.py  sleeper.py  test_run.py
src/game_predictor/tools/: __init__.py  assess.py  database.py  download.py  extract.py  narrate.py  screenshot.py  search.py
src/game_transformer/: __main__.py  data.py  pipeline.py
